# alignment_boilerplate

./: CMakeLists.txt  LICENSE.md  README.md
include/albp/: doctest_vectors.hpp  error_handling.hpp  functional.hpp  memory.hpp  page_locked_fasta.hpp  page_locked_string.hpp  random.hpp  ranges.hpp  read_fasta.hpp  reordering.hpp  simple_sw.hpp  stream_manager.hpp  timer.hpp
include/rhgb/: ctpl.hpp  error_handling.hpp  page_locked_string.hpp  read_fasta.hpp  stream_manager.hpp  timer.hpp
include/rhgt/: error_handling.hpp  memory.hpp  page_locked_string.hpp  read_fasta.hpp  rhgt  stream_manager.hpp  stream_manager.hpp.bk  timer.hpp
programs/: analyze_fasta.cpp  random_sequence_generator.cpp
src/: page_locked_fasta.cpp  page_locked_string.cpp  ranges.cpp  read_fasta.cpp  simple_sw.cpp  stream_manager.cpp
unittests/: doctest_vectors.h  test.fasta  test_main.cpp  test_page_locked_fasta.cu  test_page_locked_string.cu  test_ranges.cpp  test_read_fasta.cpp  test_reordering.cpp  test_simple_sw.cpp  test_stream_manager.cu  test_target.fasta  test_timer.cpp
